name:                terra-glide
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/psandahl/terra-glide#readme
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@gmail.com
copyright:           2017 Patrik Sandahl
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TerraGlide
  other-modules:       TerraGlide.CameraNavigation
                       TerraGlide.State
                       TerraGlide.Init
                       TerraGlide.Event
                       TerraGlide.Exit
                       TerraGlide.Options
  build-depends:       base >= 4.7 && < 5
                     , flow
                     , gl
                     , gl-scene
                     , gl-scene-camera
                     , gl-scene-math
                     , lens
                     , linear
                     , optparse-applicative
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall

executable terra-glide
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , flow
                     , gl-scene
                     , terra-glide
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded

source-repository head
  type:     git
  location: https://github.com/psandahl/terra-glide
